--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -2,6 +2,9 @@
 
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
+
+    <script type="text/javascript" src="/js/d3.min.js"></script>
+
   </head>
 
   <section>
@@ -22,7 +25,7 @@
         <fieldset>
         <legend>Node:</legend>
           <div class="form-group">
-            <input type="text" class="form-control" value="" id="nodeLabel" placeholder="Node's label"></input>
+            <input type="text" class="form-control" value="" id="nodeLabel" placeholder="Node's label (one letter)"></input>
 
           </div>   
           <div class="form-group">
@@ -39,7 +42,8 @@
 
       </div>
 
-      <canvas id="canvas" width="640" height="360" style="border:3px solid #000000;"></canvas>
+      <!-- <canvas id="canvas" width="640" height="360" style="border:3px solid #000000;"></canvas> -->
+      <div id="chart"></div>
     
     <br>
 
