--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
 
+    <link rel="stylesheet" type="text/css" href="/css/pan.css">
+
     <script type="text/javascript" src="/js/d3.min.js"></script>
 
   </head>
