--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -47,7 +47,7 @@
             </div> 
 
             <div class="form-group">
-              <button class="btn btn-primary" onclick="addEdge()" id="edgeButton">Create Node</button>
+              <button class="btn btn-primary" onclick="addEdge()" id="edgeButton">Create Edge</button>
             </div>
 
         </fieldset>
