can download now

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -60,7 +60,9 @@
     <br>
 
     <button onclick="magic()">Magic</button>
-    <button onclick="magic2()">Magic2</button>
+    <button onclick="downloadTikz();clearGraph()">Download</button>
+    <!-- <button onclick="downloadTikz();clearGraph()">Download</button> -->
+
 
     <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
